<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/layout_main_activity"
    style="@style/AppTheme">

    <TextView android:text="@string/text_nilai_tugas" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewNilaiTugas" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextNilaiTugas"
        android:layout_below="@+id/textViewNilaiTugas"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/text_nilai_uts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewNilaiUts"
        android:layout_below="@+id/editTextNilaiTugas"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextNilaiUTS"
        android:layout_below="@+id/textViewNilaiUts"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/text_nilai_uas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewNilaiUas"
        android:layout_below="@+id/editTextNilaiUTS"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextNilaiUAS"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewNilaiUas"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_hitung_dan_tampil"
        android:id="@+id/buttonHitungDanTampil"
        android:layout_below="@+id/editTextNilaiUAS"
        android:layout_centerHorizontal="true"
        android:singleLine="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_hasil"
        android:id="@+id/textViewHasil"
        android:layout_below="@+id/buttonHitungDanTampil"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false" />

</RelativeLayout>
